style/style.css
@font-face {
  font-family: "Satoshi Medium";
  src: url("../res/Fonts/OTF/Satoshi-Medium.otf");
}

@font-face {
  font-family: "Satoshi Regular";
  src: url("../res/Fonts/OTF/Satoshi-Regular.otf");
}

@font-face {
  font-family: "Satoshi Bold";
  src: url("../res/Fonts/OTF/Satoshi-Bold.otf");
}

* {
  padding: 0;
  margin: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  scroll-behavior: smooth;
  font-family: "Satoshi";
}

::-moz-selection {
  background-color: #FFD000;
  color: #121117;
}

::selection {
  background-color: #FFD000;
  color: #121117;
}

.custom__cursor__inner {
  height: 10px;
  width: 10px;
  position: fixed;
  -webkit-transform: translate(0px, 0px);
          transform: translate(0px, 0px);
  background-color: #FFD000;
  border-radius: 50%;
  -webkit-transition: height 0.3s cubic-bezier(0.46, 0.03, 0.52, 0.96), width 0.3s cubic-bezier(0.46, 0.03, 0.52, 0.96);
  transition: height 0.3s cubic-bezier(0.46, 0.03, 0.52, 0.96), width 0.3s cubic-bezier(0.46, 0.03, 0.52, 0.96);
  z-index: 5000;
  pointer-events: none;
}

.custom__cursor__outer {
  height: 42px;
  width: 42px;
  border-radius: 50%;
  border: 1px solid #996300;
  background-color: #FFD000;
  position: fixed;
  z-index: 5000;
  -webkit-transform: translate(0px, 0px);
          transform: translate(0px, 0px);
  pointer-events: none;
  opacity: 0.2;
}

.wrapper {
  max-width: 100%;
  width: 1300px;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 0em auto;
}

body {
  color: #121117;
  overflow-x: hidden;
  cursor: none;
  font-family: "Satoshi Regular";
}

.logo {
  width: 52px;
  height: auto;
}

.yellow {
  color: #C1A10F;
}

.primary-button {
  color: #121117;
  background-color: #FFD000;
  font-size: 14px;
  font-weight: bolder;
  font-family: "Satoshi Bold";
  text-transform: uppercase;
  letter-spacing: 0.3px;
  padding: 1.2em 2.6em;
  border-radius: 40px;
  -webkit-box-shadow: 0px 10px 30px 2px rgba(77, 49, 0, 0.15);
          box-shadow: 0px 10px 30px 2px rgba(77, 49, 0, 0.15);
}

.primary-button:hover {
  -webkit-transition: 300ms ease-out;
  transition: 300ms ease-out;
  background-color: #121117;
  color: #ffffff;
}

.secondary-button {
  color: #C1A10F;
  font-family: "Satoshi Medium";
  font-size: 18px;
}

.fa-linkedin-in,
.fa-github,
.fa-behance {
  -webkit-transform: scale(1.2);
          transform: scale(1.2);
}

.fa-envelope {
  border-radius: 50%;
  padding: 1em;
  color: #121117;
  -webkit-transform: scale(1.5);
          transform: scale(1.5);
  background-color: #FFD000;
}

.fa-envelope:hover {
  -webkit-transition: 300ms ease-out;
  transition: 300ms ease-out;
  background-color: #121117;
  color: #ffffff;
}

.fa-brands:hover {
  -webkit-transition: 300ms ease-out;
  transition: 300ms ease-out;
  color: #FFD000;
}

.heroImg {
  width: 380px;
  height: auto;
}

#myImg {
  width: 220px;
  height: 220px;
}

.icons {
  background-color: #ffd00048;
}

.line {
  padding: 1px;
  background-color: #FFD000;
}

.dot {
  width: 4px;
  height: 4px;
  background-color: #121117;
  opacity: 0.4;
  border-radius: 50%;
}

.problem-solved {
  background-color: #9AF8AE;
  color: #064614;
  border-radius: 0 0 100px 0;
}

.big-title {
  font-size: 52px;
  line-height: 70px;
  font-family: "Satoshi Medium";
}

.title {
  font-size: 30px;
  line-height: 52px;
  font-family: "Satoshi Medium";
}

.subtitle {
  font-size: 20px;
  font-family: "Satoshi Regular";
}

.category {
  font-size: 14px;
  font-family: "Satoshi Bold";
  text-transform: uppercase;
  letter-spacing: 0.3px;
  word-spacing: 4px;
}

.case-study-cover {
  -webkit-filter: grayscale(1);
          filter: grayscale(1);
  -webkit-transition: 500ms all ease-out;
  transition: 500ms all ease-out;
}

.case-study:hover .case-study-cover {
  -webkit-filter: grayscale(0);
          filter: grayscale(0);
}

@media only screen and (max-width: 930px) {
  .heroImg {
    width: 320px;
    height: auto;
  }
  .big-title {
    font-size: 42px;
    line-height: 56px;
    font-family: "Satoshi Medium";
  }
}

@media only screen and (max-width: 640px) {
  .big-title {
    font-size: 38px;
    line-height: 60px;
    font-family: "Satoshi Medium";
  }
  .footer-logo {
    display: none;
  }
  .custom__cursor__inner,
  .custom__cursor__outer {
    display: none;
  }
  .prototype {
    display: none;
  }
}

@media only screen and (max-width: 320px) {
  .big-title {
    font-size: 26px;
    line-height: 40px;
    font-family: "Satoshi Medium";
  }
  .name {
    font-size: 16px;
  }
}
/*# sourceMappingURL=style.css.map */

